fix dropdown gap in navigation

--- a/plonetheme/barceloneta/theme/less/dropdowns.plone.less
+++ b/plonetheme/barceloneta/theme/less/dropdowns.plone.less
@@ -89,7 +89,7 @@
   float: left;
   min-width: unset;
   padding: 5px 0;
-  margin: 2px 0 0; // override default ul
+  margin: 0; // override default ul & fix dropdown gap
   list-style: none;
   font-size: @plone-font-size-base;
   text-align: left; // Ensures proper alignment if parent has it changed (e.g., modal footer)
